# haskell-challenge

./: .gitignore  Main.hs  default.nix  flake.nix  haskell-project.cabal  holmusk-challenge.cabal  project.nix  shell.nix
codewars/: CodeWars1.hs
interview/: interview1.hs  interview2.hs
nix/: sources.json
src/: Haskell.hs
src/ch01/: WC.hs
src/ch03/: AlgebraicVector.hs  BookStore.hs  ListADT.hs  MySecond.hs  Nullable.hs  Tree.hs  ex.hs
src/ch04/: FixLines.hs  Fold.hs  InteractWith.hs  ex.hs  note.org
src/ch05/: Main  Main.hs  Prettify.hs  PutJSON.hs  SimpleJSON.hs  TODO.org  simple
src/ch06/: read.hs  test
src/ch07/: action2.hs  input.txt  touper.hs
src/ch08/: Glob.hs  GlobRegex.hs  HighestClose.hs  SumFile.hs
src/ch09/: ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs
