cabal-version:       2.4
name:                haskell-project
version:             0.1.0.0
license:             ISC
build-type:          Simple

library
           exposed-modules:     PrettyJSON
                                Prettify
                                SimpleJSON
         
                                PutJSON
           hs-source-dirs:      src/ch05
           build-depends:       base >= 4.13
           default-extensions:  Haskell2010
  
executable Hello
           main-is:             Main.hs
           build-depends:       base >=4.13
                              , random
                              , containers >= 0.6
                              , QuickCheck == 2.14.2
           default-language:    Haskell2010

executable Haskell
           main-is:             src/Haskell.hs
           build-depends:       base >=4.13
                              , containers >= 0.6
                              , QuickCheck == 2.14.2
           default-language:    Haskell2010
        
executable Ch09RecursiveContents
           hs-source-dirs:      src/ch09
           main-is:             RecursiveContents.hs
           build-depends:       base >= 4.13
                                , directory >= 1.3
                                , filepath >= 1.4
                                , QuickCheck == 2.14.2
           default-language:    Haskell2010

executable Ch09ControlledVisit
           hs-source-dirs:      src/ch09
           main-is:             ControlledVisit.hs
           build-depends:       base >= 4.13
                                , directory >= 1.3
                                , filepath >= 1.4
                                , time >= 1.1
           default-language:    Haskell2010

-- executable CodeWars.hs
--            main-is:             CodeWars1.hs
--            hs-source-dirs:      codewars
--            build-depends:       base >= 4.14
--            default-extensions:  Haskell2010